🚀 Ready for Render deployment
✅ Added render.yaml configuration
✅ Updated requirements.txt for production
✅ Added automatic deployment script
✅ All systems ready for live deployment

🤖 Samantha ready to go live!

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 pydantic-ai
-python-telegram-bot
+python-telegram-bot==21.0.1
 supabase
 openai
 python-dotenv
 httpx
-asyncio
 duckduckgo-search
 tiktoken
 aiohttp
-uvloop
 logfire
-asyncpg
+requests
